# qqself

./: .gitattributes  .gitignore  Cargo.toml  README.md  SECURITY.md  run.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  rust.yml
api-entries/: README.md
api-entries/lambda-delete/: Cargo.toml
api-entries/lambda-delete/src/: main.rs
api-entries/lambda-find/: Cargo.toml
api-entries/lambda-find/src/: main.rs
api-entries/lambda-health/: Cargo.toml
api-entries/lambda-health/src/: main.rs
api-entries/lambda-set/: Cargo.toml
api-entries/lambda-set/src/: main.rs
api-entries/services/: Cargo.toml
api-entries/services/src/: entry.rs  entry_storage.rs  entry_storage_dynamodb.rs  lib.rs  service_error.rs  test_helpers.rs  time.rs
api-entries/webservice/: Cargo.toml  Dockerfile
api-entries/webservice/src/: main.rs  routes.rs
api-sync/: Cargo.toml  Dockerfile  README.md  build.rs
api-sync/src/: lib.rs  main.rs  time.rs
api-sync/src/http/: mod.rs  routes.rs
api-sync/src/storage/: account.rs  account_mem.rs  mod.rs  payload.rs  payload_dynamodb.rs  payload_fs.rs  payload_mem.rs  payload_storage.rs  payload_storage_dynamodb.rs  payload_storage_fs.rs  payload_storage_mem.rs
book/: README.md
book/On The Path To Mastery.scriv/: On The Path To Mastery.scrivx
book/On The Path To Mastery.scriv/Files/: binder.autosave  binder.backup  search.indexes  styles.xml  writing.history
book/On The Path To Mastery.scriv/QuickLook/: Preview.html
book/On The Path To Mastery.scriv/Settings/: compile.xml  projectpreferences.xml  recents.txt  ui-common.xml  ui.plist
client-cli/: Cargo.toml  README.md  generate_readme.sh
client-cli/src/: api.rs  config.rs  http.rs  key_file.rs  main.rs  storage.rs  time.rs
client-cli/src/operations/: delete.rs  download.rs  export.rs  init.rs  mod.rs  report.rs  upload.rs
client-ios/: Makefile  README.md  generateBindings.sh
client-ios/qqself/: ContentView.swift  Persistence.swift  qqselfApp.swift
client-ios/qqself.xcodeproj/: project.pbxproj
client-ios/qqself/App/: Api.swift  Config.swift  CryptorPool.swift  Logger.swift  QqselfApp.swift  ServerApi.swift  Store.swift  qqselfApp.swift
client-ios/qqself/UI/: MainView.swift  SkillsView.swift  WeekView.swift
client-ios/qqself/qqself.xcdatamodeld/: .xccurrentversion
client-ios/qqselfCore.xcframework/: Info.plist
client-ios/qqselfCoreLib/: Package.swift
client-ios/qqselfTests/: ApiTests.swift  CryptorPoolTests.swift  StorageTests.swift  StoreTests.swift  qqselfTests.swift
client-ios/qqselfUITests/: qqselfUITests.swift  qqselfUITestsLaunchTests.swift
client-pwa/: .rsw.json  Cargo.toml  Dockerfile  README.md  app.yaml  index.html  manifest.json  package-lock.json  package.json  tsconfig.json
client-pwa/@rsw/wrapper/: Cargo.toml
client-pwa/@rsw/wrapper/src/: lib.rs
client-pwa/src/: daySymmary.ts  devcards.ts  entryEditor.ts  entryInput.ts  entryList.ts  entryProgress.ts  entrySearch.ts  main.ts  storage.ts
client-web/: .env  .eslintrc.cjs  .prettierrc  .yarnrc  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  rsw.toml  tsconfig.json  vite.config.js  vitest.setup.ts
client-web-core/: Cargo.toml  rsw.toml
client-web-core/src/: lib.rs
client-web/bridge/: Cargo.toml
client-web/bridge/src/: lib.rs  util.rs
client-web/core/: Cargo.toml
client-web/core/src/: lib.rs
client-web/src/: api.test.ts  api.ts  cache.ts  constants.ts  encryptionPool.ts  encryptionPool.worker.ts  index.d.ts  index.html  keyFile.ts  logger.ts  main.ts  reset.css  storage.ts  utils.ts  utilsTests.ts
client-web/src/app/: api.ts  auth.ts  data.ts  init.ts  store.test.ts  store.ts
client-web/src/components/: entryInput.ts  journal.ts  logoBlock.ts
client-web/src/controls/: button.ts  logo.ts  panel.ts
client-web/src/encryptionPool/: pool.ts  thread-worker.ts  web-worker.ts  worker.ts
client-web/src/pages/: devcards.ts  enter.ts  loading.ts  login.ts  progress.ts  register.ts
client-web/src/ui/: styles.ts
core/: Cargo.toml  Dockerfile  README.md
core-bindings-c/: Cargo.toml  README.md  build.rs
core-bindings-c/src/: lib.rs  panic_hook.rs  qqself.udl
core-bindings-wasm/: Cargo.toml  README.md
core-bindings-wasm/src/: api.rs  cryptor.rs  lib.rs  views.rs
core/src/: api.rs  binary_text.rs  datetime.rs  db.rs  encryption.rs  goal.rs  lib.rs  parser.rs  record.rs
core/src/data_views/: journal.rs  mod.rs  query_results.rs  skills.rs  week.rs
core/src/date_time/: datetime.rs  datetime_range.rs  mod.rs  timestamp.rs
core/src/encryption/: aes.rs  cryptor.rs  hash.rs  keys.rs  mod.rs  payload.rs  rsa.rs  search_token.rs  tokens.rs
core/src/parser/: goal.rs  mod.rs  parser.rs
core/src/parsing/: parser.rs  tokenizer.rs
core/src/progress/: mod.rs  skill.rs
infrastructure/: .terraform.lock.hcl  main.tf  terraform.tf  variables.tf
infrastructure/api-entries/: main.tf
infrastructure/domain/: main.tf  variables.tf
infrastructure/modules/lambda/: main.tf  variables.tf
infrastructure/site-app/: main.tf  variables.tf
infrastructure/site-www/: main.tf  variables.tf
ops/: README.md  iam.api-sync-apprunner.json  iam.api-sync-ecr-push.json
research/: README.md  gamification.md  library.md  skill_development.md  solutions.md
sync-server/: Cargo.toml  README.md
sync-server/src/: http.rs  main.rs  storage.rs
ui/: logo.md
www/: Dockerfile  README.md  config.toml  nginx.conf
www/content/: _index.md
www/content/mastering-system/: _index.md  draft.md
www/content/on-the-path-to-mastery/: _index.md  draft.md
www/public/: base.css  chapter.css  index.css  index.html  mastering.css  reset.css  robots.txt  sitemap.xml
www/public/mastering-system/: index.html
www/public/on-the-path-to-mastery/: index.html
www/sass/: base.sass  chapter.sass  index.sass  mastering.sass  reset.sass
www/static/: index.css  redirect.js
www/templates/: base.html  index.html  mastering.html  page_mastering.html  section_mastering.html
www/templates/shortcodes/: avoid.html  do.html  qqself.html  ref.html
(+93 files in other folders)
