[workspace]
resolver = "2"

members = [
    "core",
    "core-bindings-c",
    "core-bindings-wasm",
    "client-cli",
    "api-entries/services",
    "api-entries/webservice",
    "api-entries/lambda-health",
    "api-entries/lambda-set",
    "api-entries/lambda-delete",
    "api-entries/lambda-find",
]

[profile.release]
overflow-checks = true

