[package]
name = "qqself-api-sync"
version = "0.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
actix-web = "4.4.0"
async-trait = "0.1.74"
env_logger = "0.10.0"
futures = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.20"
qqself-core = { path = "../core", features = ["serde"] }
serde = { version="1.0.189", features = ["derive"] }
tokio = { version = "1.33.0", features = ["rt", "macros", "time"] }
thiserror = "1.0.50"
# storage-dynamodb
aws-config = { version = "0.56.1", optional = true }
aws-sdk-dynamodb = { version = "0.33.0", optional = true }

[features]
default = []
storage-dynamodb = ["dep:aws-config", "dep:aws-sdk-dynamodb"]

[build-dependencies]
vergen = { version = "8.2.5", features = ["build", "cargo", "git", "git2", "rustc"] }
