[package]
name = "qqself-client-cli"
version = "0.0.1"
edition = "2021"

[dependencies]
qqself-core = {path = "../core", features = ["serde"] }
reqwest = "0.11.12"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.25"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["local-time", "env-filter"] }
rayon = "1.5.3"
