[package]
name = "qqself-client-cli"
version = "0.0.0"
edition = "2021"

[dependencies]
qqself-core = {path = "../core", features = ["serde"] }
reqwest = "0.11.22"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.16", features = ["local-time", "env-filter"] }
rayon = "1.8.0"
clap = { version = "4.4.7", features = ["derive"] }
