[package]
name = "qqself-client-cli"
version = "0.0.0"
edition = "2021"

[dependencies]
qqself-core = {path = "../core", features = ["serde"] }
reqwest = "0.11.23"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["local-time", "env-filter"] }
rayon = "1.8.0"
clap = { version = "4.4.13", features = ["derive"] }
