[package]
name = "client-pwa"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
core = {path = "../core" }
wasm-bindgen = "0.2.76"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
