[package]
name = "qqself-core"
version = "0.0.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.1"
blake2 = "0.10.4"
bs58 = "0.4.0"
getrandom = { version = "0.2.7", features = ["js"] }
lazy_static = "1.4.0"
regex = "1.6.0"
rsa = "0.6.1"
serde = { version = "1.0", optional = true, features = ["derive"] }
thiserror = "1.0.35"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.63"

[features]
default = []
cargo = []
