[package]
name = "qqself-core"
version = "0.0.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.2"
blake2 = "0.10.6"
bs58 = "0.5.0"
getrandom = { version = "0.2.10", features = ["js"] }
lazy_static = "1.4.0"
regex = "1.9.1"
rsa = "0.9.2"
serde = { version = "1.0.179", optional = true, features = ["derive"] }
thiserror = "1.0.44"
time = { version = "0.3.23", features = ["wasm-bindgen", "local-offset"] }
wasm-bindgen = { version = "0.2.86", optional = true }
js-sys = {version = "0.3.64", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[features]
default = []
cargo = []
wasm = ["dep:wasm-bindgen", "dep:js-sys"]
