[package]
name = "qqself-core"
version = "0.0.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
aes-gcm = "0.10.3"
blake2 = "0.10.6"
bs58 = "0.5.0"
getrandom = { version = "0.2.11", features = ["js"] }
lazy_static = "1.4.0"
regex = "1.10.2"
rsa = "0.9.6"
serde = { version = "1.0.195", optional = true, features = ["derive"] }
thiserror = "1.0.56"
time = { version = "0.3.31", features = ["wasm-bindgen", "local-offset"] }
wasm-bindgen = { version = "0.2.90", optional = true }
js-sys = {version = "0.3.66", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.39"

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "cargo", "git", "git2", "rustc"] }

[features]
default = []
cargo = []
wasm = ["dep:wasm-bindgen", "dep:js-sys"]
