[package]
name = "qqself-lambda-entries-find"
version = "0.0.0"
edition = "2021"

[dependencies]
lambda_http ={ version = "0.9.0", default_features=false, features=["apigw_http"]}
tokio = { version = "1.35.1", features = ["macros"] }
qqself-api-entries-services = { path = "../services", features=["dynamodb"] }
serde = "1.0.195"
serde_json = "1.0.111"

[dev-dependencies]
qqself-core = { path = "../../core" }
qqself-api-entries-services = { path = "../services", features=["test_helpers"] }
