[package]
name = "qqself-api-entries-services"
version = "0.0.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.77"
aws-config = { version = "1.1.1", optional = true }
aws-sdk-dynamodb = { version = "1.9.0", optional = true }
env_logger = "0.10.1"
futures = "0.3.30"
log = "0.4.20"
qqself-core = { path = "../../core", features = ["serde"] }
serde = { version="1.0.193", features = ["derive"] }
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = ["rt", "macros", "time"] }

[features]
default = []
storage-dynamodb = ["dep:aws-config", "dep:aws-sdk-dynamodb"]
