[package]
name = "qqself-api-entries-services"
version = "0.0.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.77"
aws-config = { version = "1.1.2", optional = true }
aws-sdk-dynamodb = { version = "1.10.0", optional = true }
env_logger = "0.10.1"
futures = "0.3.30"
log = "0.4.20"
qqself-core = { path = "../../core", features = ["serde"] }
serde = { version="1.0.195", features = ["derive"] }
thiserror = "1.0.56"
lazy_static = "1.4.0"
tokio = { version = "1.35.1", features = ["rt", "macros", "time"] }

[features]
default = []
dynamodb = ["dep:aws-config", "dep:aws-sdk-dynamodb"]
# Separate feature for enabling dynamodb tests, otherwise cargo feature unification may unexpectedly run dynamodb tests
dynamodb-test = ["dynamodb"]
test_helpers = []
