[package]
name = "qqself-client-web-bridge"
version = "0.0.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.86"
qqself-core = { path = "../../core", features = ["wasm"] }
console_error_panic_hook = "0.1.7"
js-sys = { version = "0.3.64" }

[build-dependencies]
vergen = { version = "8.2.4", features = ["build", "cargo", "git", "gitcl", "rustc"] }
