[package]
name = "qqself-client-web-bridge"
version = "0.0.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.88"
qqself-core = { path = "../../core", features = ["wasm"] }
console_error_panic_hook = "0.1.7"
js-sys = { version = "0.3.65" }

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "cargo", "git", "git2", "rustc"] }
