[package]
name = "qqself-client-web-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.83"
qqself-core = { path = "../../core", features = ["wasm"] }
console_error_panic_hook = "0.1.7"

[build-dependencies]
vergen = "7.4.3"
